2005-08-11  Richard Henderson  <rth@redhat.com>

	PR middle-end/23312
	* gimplify.c (gimplify_one_sizepos): Check for INTEGER_TYPE
	before using TYPE_IS_SIZETYPE.

2005-08-11  Richard Earnshaw  <richard.earnshaw@arm.com>

	PR target/23250
	* arm.c (arm_override_options): If the user has selected callee-super-
	interworking, then enable normal interworking.

2005-08-10  Kazuhiro Inaoka <inaoka.kazuhiro@renesas.com>

	PR 23309
	* config/m32r/m32r.c (m32r_reload_lr): Fix off by one error when
	deciding which instruction sequence to use.

2005-08-09  Bernd Schmidt  <bernd.schmidt@analog.com>

	Mostly from Jie Zhang (jie.zhang@analog.com)
	* config.gcc: Add bfin-uclinux.
	* config/bfin/uclinux.h: New file.
	* config/bfin/bfin-modes.def: Update FSF address.
	* config/bfin/bfin-protos.h: Likewise.
	* config/bfin/bfin.md: Likewise.
	* config/bfin/bfin.opt: Likewise.
	* config/bfin/crti.s: Likewise.
	* config/bfin/crtn.s: Likewise.
	* config/bfin/lib1funcs.asm: Likewise.
	* config/bfin/predicates.md: Likewise.
	* config/bfin/bfin.c: Likewise.
	(bfin_return_in_memory): Update to match Visual DSP compiler.
	* config/bfin/bfin.h: Update FSF address.
	(ASM_OUTPUT_ALIGN): Write alignment in bytes, not log thereof.
	* config/bfin/elf.h (NO_IMPLICIT_EXTERN_C): Define.

2005-08-08  Richard Henderson  <rth@redhat.com>

	PR 22439
	* gimplify.c (gimplify_one_sizepos): Preserve the original type.

2005-08-08  Josh Conner  <jconner@apple.com>

	PR rtl-optimization/23241
	* combine.c (simplify_comparison): Fix error in determining
	whether to lift a subreg from comparison.

2005-08-08  Richard Henderson  <rth@redhat.com>

	PR 21894
	* tree-nested.c (convert_local_reference): Save and restore val_only
	around component_ref and friends.  Clear walk_subtrees by default.

2005-08-07  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	* pa64-regs.h (CONDITIONAL_REGISTER_USAGE): Fix loop upper bound.

2005-08-05  Richard Henderson  <rth@redhat.com>

	PR 21728